[gd_scene load_steps=10 format=3 uid="uid://dys1pp7uead78"]

[ext_resource type="Script" uid="uid://bj3av05buyeo6" path="res://game/level/LevelTileMap.gd" id="1_us3jo"]
[ext_resource type="TileSet" uid="uid://b64fhmdc5bn5" path="res://game/shared/graphics/tile_map.tres" id="2_6qfqa"]
[ext_resource type="Script" uid="uid://dywqgs0s3x4xl" path="res://game/shared/Layer/Background/BackgroundLayer.gd" id="3_g7cq2"]
[ext_resource type="Script" uid="uid://dsgq3dx1v2nie" path="res://game/shared/Layer/Colour/ColourLayer.gd" id="4_tulvh"]
[ext_resource type="Script" uid="uid://b6t4748x4o15m" path="res://game/shared/Layer/Tile/TileLayer.gd" id="5_17xxu"]
[ext_resource type="AudioStream" uid="uid://dp6q56ru2dpwt" path="res://game/shared/sfx/sfx_pop_down_tile_1.wav" id="6_tulvh"]
[ext_resource type="AudioStream" uid="uid://cwjemyyjcvmae" path="res://game/shared/sfx/sfx_pop_down_tile_2.wav" id="7_17xxu"]
[ext_resource type="AudioStream" uid="uid://bov5rt5shb548" path="res://game/shared/sfx/sfx_pop_down_tile_3.wav" id="8_ixkmw"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_crlv1"]
playback_mode = 1
streams_count = 3
stream_0/stream = ExtResource("6_tulvh")
stream_1/stream = ExtResource("7_17xxu")
stream_2/stream = ExtResource("8_ixkmw")

[node name="LevelTileMap" type="Node2D" node_paths=PackedStringArray("background_layer", "tile_colour_layer", "tile_layer", "tile_hover_layer")]
script = ExtResource("1_us3jo")
background_layer = NodePath("BackgroundLayer")
tile_colour_layer = NodePath("ColourLayer")
tile_layer = NodePath("TileLayer")
tile_hover_layer = NodePath("TileHoverLayer")

[node name="BackgroundLayer" type="TileMapLayer" parent="."]
tile_set = ExtResource("2_6qfqa")
script = ExtResource("3_g7cq2")
metadata/_custom_type_script = "uid://dywqgs0s3x4xl"

[node name="ColourLayer" type="TileMapLayer" parent="." node_paths=PackedStringArray("tile_layer")]
tile_set = ExtResource("2_6qfqa")
script = ExtResource("4_tulvh")
tile_layer = NodePath("../TileLayer")
metadata/_custom_type_script = "uid://dsgq3dx1v2nie"

[node name="TileLayer" type="TileMapLayer" parent="."]
tile_set = ExtResource("2_6qfqa")
script = ExtResource("5_17xxu")
metadata/_custom_type_script = "uid://b6t4748x4o15m"

[node name="TileHoverLayer" type="TileMapLayer" parent="."]
modulate = Color(1, 1, 1, 0.49803922)
tile_set = ExtResource("2_6qfqa")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_crlv1")
